--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="home_fragment_list_title_milongas">Milongas near you</string>
     <string name="home_fragment_list_title_teachers">Teachers near you</string>
     <string name="home_fragment_list_title_events">Events</string>
+    <string name="milongas_list_item_title">La Rosa Milonga</string>
+    <string name="milongas_list_item_rating">5.0</string>
+    <string name="milongas_list_item_rating_percent">(100)</string>
+    <string name="milongas_list_item_time_duration">From 15:30 to 18:00</string>
+    <string name="milongas_list_item_direction">15 Km away</string>
+    <string name="milongas_list_item_directions">Directions</string>
+    <string name="milongas_list_item_info">+ Info</string>
 </resources>
